# TEMPO

./: .gitignore  .readthedocs.yaml  Evolver_Rabiexample-Copy1.ipynb  Evolver_Ramseyexample-Copy1.ipynb  README.md  pulse.py  pyproject.toml  requirements.txt  requirements_docs.txt
.github/workflows/: test.yml
docs/: requirements.txt  requirements_docs.txt
docs/source/: NVscripts.rst  api.rst  conf.py  custom.css  index.rst  install.rst  misc.rst  modules.rst  tempo.rst  tutorials.rst
docs/source/_static/css/: custom.css
docs/source/notebooks/: Tutorial_1_RABI.ipynb
examples/: 1_Rabi_Example.ipynb  2_Ramsey_Example.ipynb  Evolver_compare.ipynb  Evolver_comparison.ipynb  Speedup Visualization.ipynb  Tutorial_1_RABI.ipynb  hamfuncs.py  qsys.py
paper/: paper.bib  paper.crossref  paper.md
paper/jats/: paper.jats
tempo/: README.md  __init__.py  evolver.py  exceptions.py  ham.py  hamfuncs.py  hamiltonian.py  pulse.py  pulse_recipe.py  pulse_sequence.py  pulsesequence.py  pulsetype.py  qsys.py  requirements.txt  tests.py
