[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TEMPO"
authors = [{name = "Sonja Hakala", email = "hakalas@terpmail.umd.edu"}]
dynamic = ["version", "description"]

# Optional
readme = "README.md"
license = {file = "COPYING.txt"}

[project.urls]
Homepage = "https://github.com/hakalasonja/TEMPO"

[tool.flit.module]
name = "tempo"